[B]1.4.6[/B]
- Allow user to select image type to show on TVShows shelf on skins Home screen.
- Skin settings menus reorganised, new heading for home screen added
  and various items moved to this sub menu.
- Cleaned up layout of Filemanager, MusicPlaylist Editor and Video Info screens.
- Add hook to Video Extras script to Video info screen.
- Add LiveTV codec info to VideoFullScreen window.
- Added Brazilian and Hungarian Ratings images.
- Remove a number of redundant skin graphics.
- Added a number of missing video and audio codec flag images.
- A number of minor bug fixes and performance tweaks.

[B]1.4.5[/B]
- Cleanup of a number of skin texture files.
- Changes to make skin Gotham compliant.
- further changes to skin navigation to improve consistency of navigation in settings screens.
- A number of minor bug fixes and performance tweaks.

[B]1.3.5[/B]
- Reenabled tilting icons in List and Wall views, setting now accessable from "View-as" menu.
- New home menu type "Icon".  User can now select from three home menu types
  (Gen1 ,2 or 3 AppleTV home menu types).
- Removed all remaining redundant strings.
- Moved a number of common code blocks to the includes file to ease maintainabilty
  and to slightly reduce memory footprint.
- Major code cleanup in prepartion for Gotham version of the skin.
- Rewrite File stacking dialog.  Code was broken for a long time without anyone noticing,
  thanks Ronnie (Transparency!) for borrowed code.
- Improved navigation and clean up of screen layout for music info screens.
- Navigation improved in a number of other screens and dialogs.
- New languages added, Canadian French and Swedish.
- Number of minor bug fixes.

[B]1.3.4[/B]
- Recoded Horizontal home menu to fix issue with losing focus.
- Allow user to select type of shelf icon(s) in horizontal home menu.
- Reworked horizontal home shelf icons to match our fruity friends a little more closely.
- Added support for Lyrics script.