@@ -1,5 +1,6 @@
 [B]1.4.6[/B]
 - Allow user to select image type to show on TVShows shelf on skins Home screen.
+- Add radar animation in MyWeather screen when oz.weather plugin is enabled.
 - Skin settings menus reorganised, new heading for home screen added
   and various items moved to this sub menu.
 - Cleaned up layout of Filemanager, MusicPlaylist Editor and Video Info screens.
